Fix field size on smaller screens

--- a/src/app/search/filter/filter.component.css
+++ b/src/app/search/filter/filter.component.css
@@ -1,9 +1,22 @@
 form {
   display: flex;
   flex-flow: row wrap;;
-  justify-content: space-around;
+  justify-content: space-between;
 }
 
 .formGroup {
-  flex: 1 1 auto;
+  flex: 1 1 45%;
+  margin-right: 10px;
 }
+
+.inputWrapper {
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: space-between;
+}
+
+.mat-form-field {
+  flex: 1 1 45%;
+  margin-right: 10px;
+}
+
